--- a/HouHavn.Web/Pages/Lists/People/Edit.cshtml
+++ b/HouHavn.Web/Pages/Lists/People/Edit.cshtml
@@ -9,7 +9,7 @@
 
 <hr />
 
-<form method="post">
+<form method="post" autocomplete="off">
     <div class="input">
         <input asp-for="Person.FirstName" placeholder=" " />
         <label asp-for="Person.FirstName"></label>
