--- a/HouHavn.Web/Pages/Creation/berths.cshtml
+++ b/HouHavn.Web/Pages/Creation/berths.cshtml
@@ -8,7 +8,7 @@
 <h2>Opret bådplads</h2>
 
 <hr />
-<form method="post">
+<form method="post" autocomplete="off">
     @*<div asp-validation-summary="All" class="error"></div>*@
 
     @{string exists = Model.ErrorMessage.Length == 0 ? "checked" : "";}
