--- a/HouHavn.Web/Pages/Lists/Boats/Edit.cshtml
+++ b/HouHavn.Web/Pages/Lists/Boats/Edit.cshtml
@@ -8,8 +8,8 @@
 <h1>Redigér detaljer for båd</h1>
 <hr />
 
-<form method="post">
-    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+<form method="post" autocomplete="off">
+    <div asp-validation-summary="ModelOnly" class="error"></div>
     <input type="hidden" asp-for="Boat.BoatId" />
     <div class="input">
         <input asp-for="Boat.Name" placeholder=" " />
