--- a/HouHavn.Web/Pages/Shared/_Layout.cshtml
+++ b/HouHavn.Web/Pages/Shared/_Layout.cshtml
@@ -60,7 +60,7 @@
 
     <footer>
         <div>
-            <p>&copy; @DateTime.Now.Year - Hou Havn<a asp-page="/Privacy"></a></p>
+            <p>&copy; @DateTime.Now.Year - Made by Aspit<a asp-page="/Privacy"></a></p>
         </div>
     </footer>
 
