--- a/HouHavn.Web/Pages/Index.cshtml
+++ b/HouHavn.Web/Pages/Index.cshtml
@@ -6,12 +6,45 @@
 }
 
 <h1>Plads nummer</h1>
-
+<hr />
+<br />
 @{
     int totalBerths = Model.Berth.Count;
     int totalNumberOfBoxs = totalBerths / 100;
 }
+
 <div class="main">
+    @for (int i = 1; i < 4; i++)
+    {
+    <div>
+        <h2>Bro nr @i</h2>
+        <div class="berthdisplay">
+            @foreach (var berth in Model.Berth.Where(b => b.Bridge == i))
+            {
+                string avail = berth.Boats.FirstOrDefault() != null ? "available" : "notavailable";
+                <div class="tooltip @avail ">
+                    @if (berth.Boats.FirstOrDefault() != null)
+                    {
+                        <a href="/display/boatinfo/@berth.Boats.FirstOrDefault().BoatId">
+                            @Html.DisplayFor(modelItem => berth.BerthId)
+                            @if (berth.Boats.FirstOrDefault() != null)
+                            {
+                                <span class="tooltiptext">Båd: @Html.DisplayFor(modelItem => berth.Boats.FirstOrDefault().Name) <br />Ejer: @Html.DisplayFor(modelItem => berth.Boats.FirstOrDefault().PersonNavigation.FullName)</span>
+                            }
+                        </a>
+                    }
+                    else
+                    {
+                        @Html.DisplayFor(modelItem => berth.BerthId)
+                    }
+                </div>
+            }
+        </div>
+    </div>
+    }
+</div>
+
+@*<div class="main">
         @for (int i = 0; i < totalNumberOfBoxs + 1; i++)
         {
 
@@ -41,4 +74,4 @@
             </div>
             <br />
         }        
-</div>
+</div>*@
