--- a/HouHavn.Web/wwwroot/css/styles.scss
+++ b/HouHavn.Web/wwwroot/css/styles.scss
@@ -362,9 +362,9 @@ table {
 .main{
     display: flex;
     justify-content: space-between;
-    
-    img{
-        width: 500px;
+
+    >div {
+        flex-grow: 1;
     }
 }
 
@@ -401,7 +401,7 @@ main a {
             position: absolute;
             z-index: 1;
             /*top: -5px;*/
-            left: 110%;
+            left: 200%;
             top: 14.5px;
             transform: translateY(-50%);
 
@@ -440,11 +440,10 @@ main a {
     flex-wrap: wrap;
     color: #ebe2e2;
     text-align:center;
-    width: calc(100% - 500px);
 
     div {
         height: 10%;
-        width: 5%;
+        width: 10%;
         box-sizing: border-box;
         margin-right: 2.6%;
         padding-top: 4px;
