small error fixed in Person edit page

--- a/HouHavn.Web/Pages/Lists/People/Edit.cshtml
+++ b/HouHavn.Web/Pages/Lists/People/Edit.cshtml
@@ -10,6 +10,7 @@
 <hr />
 
 <form method="post" autocomplete="off">
+    <input type="hidden" asp-for="Person.PersonId"/>
     <div class="input">
         <input asp-for="Person.FirstName" placeholder=" " />
         <label asp-for="Person.FirstName"></label>
