Styling and fixes

--- a/HouHavn.Web/Pages/Index.cshtml
+++ b/HouHavn.Web/Pages/Index.cshtml
@@ -5,7 +5,7 @@
     ViewData["Title"] = "Forside";
 }
 
-<h1>Båd plads nummer</h1>
+<h1>Pladsnummer</h1>
 
 @{
     int totalBerths = Model.Berth.Count;
