--- a/HouHavn.Web/Pages/Lists/Boats/Details.cshtml
+++ b/HouHavn.Web/Pages/Lists/Boats/Details.cshtml
@@ -2,74 +2,45 @@
 @model HouHavn.Web.Pages.Boats.DetailsModel
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Detaljer for båd";
 }
 
-<h1>Detaljer for båd</h1>
+<h2>Detaljer for båd</h2>
 
 <div>
     <hr />
-    <dl>
-        <dt>
-            @Html.DisplayNameFor(model => model.Boat.Name)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Boat.Name)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.Boat.Type)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Boat.Type)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.Boat.Length)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Boat.Length) meter
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.Boat.Width)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Boat.Width) meter
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.Boat.Dept)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Boat.Dept) meter
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.Boat.PropulsionType)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Boat.PropulsionType)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.Boat.Notes)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Boat.Notes)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.Boat.BerthNavigation)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Boat.BerthNavigation.BerthId)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.Boat.PersonNavigation)
-        </dt>
-        <dd>
-            <a asp-page="../People/Details" asp-route-id="@Model.Boat.PersonNavigation.PersonId">@Html.DisplayFor(model => model.Boat.PersonNavigation.FullName)</a>
-        </dd>
-    </dl>
+    <h3>Bådoplysninger:</h3>
+    <p>
+        @Html.DisplayNameFor(model => model.Boat.Name): <a asp-page="../Lists/Boats/Details" asp-route-id="@Model.Boat.BoatId">@Html.DisplayFor(model => model.Boat.Name)</a>
+    </p>
+
+    <p>
+        @Html.DisplayNameFor(model => model.Boat.Type): @Html.DisplayFor(model => model.Boat.Type)
+    </p>
+
+    <p>
+        @Html.DisplayNameFor(model => model.Boat.Length): @Html.DisplayFor(model => model.Boat.Length) meter
+    </p>
+
+    <p>
+        @Html.DisplayNameFor(model => model.Boat.Width): @Html.DisplayFor(model => model.Boat.Width) meter
+    </p>
+
+    <p>
+        @Html.DisplayNameFor(model => model.Boat.Dept): @Html.DisplayFor(model => model.Boat.Dept) meter
+    </p>
+
+    <p>
+        @Html.DisplayFor(model => model.Boat.Notes)
+    </p>
+    <p>
+        <a asp-page="../People/Details" asp-route-id="@Model.Boat.PersonNavigation.PersonId">@Html.DisplayFor(model => model.Boat.PersonNavigation.FullName)</a>
+    </p>
 </div>
 <div>
-    <a asp-page="./Edit" asp-route-id="@Model.Boat.BoatId">Redigér</a> |
-    <a href='javascript:history.go(-1)'>Tilbage</a> |
-    <a asp-page="./Delete" asp-route-id="@Model.Boat.BoatId" class="delete">Slet</a>
+    <a class="button" asp-page="./Edit" asp-route-id="@Model.Boat.BoatId">Redigér</a>
+    <a class="button" href='javascript:history.go(-1)'>Tilbage</a>
+    <a asp-page="./Delete" asp-route-id="@Model.Boat.BoatId" class="delete button">Slet</a>
 
     @*<a asp-page="./Index">Tilbage til listen</a>*@
 </div>
