--- a/HouHavn.Web/Pages/Lists/Boats/Edit.cshtml
+++ b/HouHavn.Web/Pages/Lists/Boats/Edit.cshtml
@@ -5,7 +5,7 @@
     ViewData["Title"] = "Redigér detaljer for båd";
 }
 
-<h1>Redigér detaljer for båd</h1>
+<h2>Redigér detaljer for båd</h2>
 <hr />
 
 <form method="post" autocomplete="off">
@@ -84,8 +84,7 @@
 </form>
 
 <div>
-    <a href='javascript:history.go(-1)'>Tilbage</a>
-    @*<a asp-page="./Index">Tilbage til listen</a>*@
+    <a class="button" href='javascript:history.go(-1)'>Tilbage</a>
 </div>
 
 @section Scripts {
