--- a/HouHavn.Web/Pages/Lists/People/Delete.cshtml
+++ b/HouHavn.Web/Pages/Lists/People/Delete.cshtml
@@ -2,121 +2,65 @@
 @model HouHavn.Web.Pages.Lists.People.DeleteModel
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Slet kunde";
 }
 
-<h1>Slet kunde</h1>
+<h2>Slet kunde</h2>
 
 
 <h3>Er du sikker på at du vil slette denne kunde?</h3>
 <div>
 
     <hr />
-    <dl>
-        <dt>
-            @Html.DisplayNameFor(model => model.Person.FirstName)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Person.FirstName)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.Person.LastName)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Person.LastName)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.Person.Address)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Person.Address)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.Person.PostalCode)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Person.PostalCode)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.Person.City)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Person.City)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.Person.Country)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Person.Country)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.Person.PhoneNumber)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Person.PhoneNumber)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.Person.Email)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Person.Email)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.Person.Member)
-        </dt>
-        <dd>
-            @if (Model.Person.Member == 1)
-            {
-                <p>Ja</p>
-            }
-            else
-            {
-                <p>Nej</p>
-            }
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.Person.BoatGuild)
-        </dt>
-        <dd>
-            @if (Model.Person.BoatGuild == 1)
-            {
-                <p>Ja</p>
-            }
-            else
-            {
-                <p>Nej</p>
-            }
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.Person.DingyGuild)
-        </dt>
-        <dd>
-            @if (Model.Person.DingyGuild == 1)
-            {
-                <p>Ja</p>
-            }
-            else
-            {
-                <p>Nej</p>
-            }
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.Person.Notes)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Person.Notes)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.Person.Boats)
-        </dt>
-        <dd>
-            @foreach (var boat in Model.Person.Boats)
-            {
-                <a asp-page="../Boats/Details" asp-route-id="@boat.BoatId">@boat.Name</a><br />
-            }
-        </dd>
-    </dl>
-        <p class="error">@Model.ErrorMsg</p>
+    <h3>Stamoplysninger</h3>
+    <p>
+        @Html.DisplayFor(model => model.Person.FullName)
+    </p>
+    <p>
+        @Html.DisplayFor(model => model.Person.Address)
+    </p>
+
+    <p>
+        @Html.DisplayFor(model => model.Person.PostalCode) - @Html.DisplayFor(model => model.Person.City)
+    </p>
+
+    <p>
+        @Html.DisplayFor(model => model.Person.Country)
+    </p>
+
+    <p>
+        @Html.DisplayFor(model => model.Person.Email)
+    </p>
+
+    <p>
+        @Html.DisplayFor(model => model.Person.PhoneNumber)
+    </p>
+
+    <p>
+        @Html.DisplayFor(model => model.Person.Notes)
+    </p>
+    <br />
+    <p>
+        Kunde af havn: @(@Model.Person.Member == 1 ? "Ja" : "Nej")
+    </p>
+
+    <p>
+        Medlem af bådlaug: @(@Model.Person.BoatGuild == 1 ? "Ja" : "Nej")
+    </p>
+
+    <p>
+        Medlem af Jollelaug: @(@Model.Person.DingyGuild == 1 ? "Ja" : "Nej")
+    </p>
+    <br />
+    <p>Både:</p>
+    <p>
+        @foreach (var boat in Model.Person.Boats)
+        {
+            <a asp-page="../Boats/Details" asp-route-id="@boat.BoatId">@boat.Name</a><br />
+        }
+    </p>
+
+    <p class="error">@Model.ErrorMsg</p>
 
     <form method="post">
         <input type="hidden" asp-for="Person.PersonId" />
@@ -124,6 +68,6 @@
         <div class="submit">
             <input type="submit" value="Slet kunde" class="delete" />
         </div>
-        <a href='javascript:history.go(-1)'>Tilbage</a>
+        <a class="button" href='javascript:history.go(-1)'>Tilbage</a>
     </form>
 </div>
