--- a/HouHavn.Web/wwwroot/css/styles.css
+++ b/HouHavn.Web/wwwroot/css/styles.css
@@ -1,4 +1,11 @@
-﻿body {
+﻿/*$light-blue: #5D9BFB;*/
+.flex {
+  display: flex;
+  justify-content: space-between; }
+  .flex h3 {
+    margin-bottom: 10px; }
+
+body {
   overflow-x: hidden; }
 
 * {
@@ -50,7 +57,7 @@ header {
           font-size: .9em;
           padding: 5px;
           border: none;
-          border: 2px solid #5D9BFB;
+          border: 2px solid #56789a;
           outline: none; }
         header > div nav form input[type=text] {
           border-radius: 10px 0 0 10px;
@@ -58,13 +65,13 @@ header {
           border-right: none; }
         header > div nav form input[type=submit] {
           padding: 5px 15px;
-          background: #5D9BFB;
+          background: #56789a;
           transition: .3s;
           color: white;
           border-radius: 0 10px 10px 0; }
           header > div nav form input[type=submit]:hover {
-            background: #2b7cfa;
-            border-color: #2b7cfa; }
+            background: #445f79;
+            border-color: #445f79; }
       header > div nav ul {
         list-style: none;
         display: flex; }
@@ -163,7 +170,7 @@ form {
     form div.input input:focus + label, form div.input input:not(:placeholder-shown) + label {
       bottom: 20px;
       font-size: .9rem;
-      color: #5D9BFB; }
+      color: #56789a; }
       form div.input input:focus + label + .slider, form div.input input:not(:placeholder-shown) + label + .slider {
         transform: translateX(0); }
     form div.input input[type=text], form div.input input[type=email], form div.input input[type=number] {
@@ -189,7 +196,7 @@ form {
       bottom: 0;
       height: 3px;
       width: 100%;
-      background: #5D9BFB;
+      background: #56789a;
       margin: 0;
       transform: translateX(-100%); }
   form div.textarea {
@@ -211,13 +218,13 @@ form {
       color: white;
       transition: background .3s; }
       form div.submit input.create {
-        background: #5D9BFB; }
+        background: #56789a; }
       form div.submit input.delete {
-        background: #f00; }
+        background: #d33; }
       form div.submit input.create:hover {
-        background: #2b7cfa; }
+        background: #445f79; }
       form div.submit input.delete:hover {
-        background: #cc0000; }
+        background: #bd2020; }
   form div.select {
     margin-top: 20px; }
     form div.select select {
@@ -236,7 +243,7 @@ table {
     color: black;
     transition: .3s; }
     table a:hover {
-      color: #5D9BFB; }
+      color: #56789a; }
 
 .main {
   display: flex;
@@ -245,31 +252,31 @@ table {
     flex-grow: 1; }
 
 main a.delete:hover {
-  color: #dd0000; }
+  color: #d33; }
 
 main a {
   color: black;
   transition: .3s; }
   main a.button {
     text-decoration: none;
-    background: #5D9BFB;
+    background: #56789a;
     padding: 15px;
     margin-top: 20px;
     margin-right: 10px;
     color: white;
     display: inline-block; }
     main a.button.delete {
-      background: red; }
+      background: #d33; }
       main a.button.delete:hover {
-        background: #cc0000; }
+        background: #bd2020; }
     main a.button:hover {
       color: white;
-      background: #2b7cfa; }
+      background: #445f79; }
   main a:hover {
-    color: #5D9BFB; }
+    color: #56789a; }
 
 .error {
-  color: #dd0000; }
+  color: #d33; }
 
 .tooltip {
   position: relative;
@@ -308,7 +315,7 @@ main a {
 
 .available {
   /*background-image: linear-gradient(to right, rgba(0,0,0,0) 60%, rgba(212, 39, 39, 0.80));*/
-  background: #d33131; }
+  background: #d33; }
 
 .berthdisplay {
   display: flex;
@@ -333,7 +340,7 @@ main a {
 dl {
   margin-top: 20px; }
   dl dt {
-    color: #5D9BFB;
+    color: #56789a;
     font-size: .9rem; }
   dl dd {
     padding: 0 15px 15px; }
