--- a/HouHavn.Web/Pages/Display/BoatInfo.cshtml
+++ b/HouHavn.Web/Pages/Display/BoatInfo.cshtml
@@ -11,9 +11,27 @@
     <hr />
     <div class="flex">
         <article>
-
             <h3>Bådoplysninger</h3>
-            <p>
+            <dl>
+                <dt>@Html.DisplayNameFor(model => model.Boat.Name)</dt>
+                <dd><a asp-page="../Lists/Boats/Details" asp-route-id="@Model.Boat.BoatId">@Html.DisplayFor(model => model.Boat.Name)</a></dd>
+
+                <dt>@Html.DisplayNameFor(model => model.Boat.Type)</dt>
+                <dd>@Html.DisplayFor(model => model.Boat.Type)</dd>
+
+                <dt>@Html.DisplayNameFor(model => model.Boat.Length)</dt>
+                <dd>@Html.DisplayFor(model => model.Boat.Length) meter</dd>
+
+                <dt>@Html.DisplayNameFor(model => model.Boat.Width)</dt>
+                <dd>@Html.DisplayFor(model => model.Boat.Width) meter</dd>
+
+                <dt>@Html.DisplayNameFor(model => model.Boat.Dept)</dt>
+                <dd>@Html.DisplayFor(model => model.Boat.Dept) meter</dd>
+
+                <dt>@Html.DisplayNameFor(model => model.Boat.Notes)</dt>
+                <dd>@Html.DisplayFor(model => model.Boat.Notes)</dd>
+            </dl>
+            @*<p>
                 @Html.DisplayNameFor(model => model.Boat.Name): <a asp-page="../Lists/Boats/Details" asp-route-id="@Model.Boat.BoatId">@Html.DisplayFor(model => model.Boat.Name)</a>
             </p>
 
@@ -35,11 +53,12 @@
 
             <p>
                 @Html.DisplayFor(model => model.Boat.Notes)
-            </p>
+            </p>*@
         </article>
         <article>
             <h3>Stamoplysninger</h3>
-            <p>
+            
+            @*<p>
                 <a asp-page="../Lists/People/Details" asp-route-id="@Model.Boat.PersonNavigation.PersonId">@Html.DisplayFor(model => model.Boat.PersonNavigation.FullName)</a>
             </p>
             <p>
@@ -60,16 +79,42 @@
 
             <p>
                 @Html.DisplayFor(model => model.Boat.PersonNavigation.PhoneNumber)
-            </p>
+            </p>*@
+        <dl>
+            <dt>@Html.DisplayNameFor(model => model.Boat.PersonNavigation.FullName)</dt>
+            <dd><a asp-page="../Lists/People/Details" asp-route-id="@Model.Boat.PersonNavigation.PersonId">@Html.DisplayFor(model => model.Boat.PersonNavigation.FullName)</a></dd>
 
-            <p>
-                @Html.DisplayFor(model => model.Boat.PersonNavigation.Notes)
-            </p>
+            <dt>@Html.DisplayNameFor(model => model.Boat.PersonNavigation.Address)</dt>
+            <dd>@Html.DisplayFor(model => model.Boat.PersonNavigation.Address)</dd>
+            <dd>@Html.DisplayFor(model => model.Boat.PersonNavigation.PostalCode) - @Html.DisplayFor(model => model.Boat.PersonNavigation.City)</dd>
+            <dd>@Html.DisplayFor(model => model.Boat.PersonNavigation.Country)</dd>
+
+            <dt>@Html.DisplayNameFor(model => model.Boat.PersonNavigation.Email)</dt>
+            <dd>@Html.DisplayFor(model => model.Boat.PersonNavigation.Email)</dd>
+
+            <dt>@Html.DisplayNameFor(model => model.Boat.PersonNavigation.PhoneNumber)</dt>
+            <dd>@Html.DisplayFor(model => model.Boat.PersonNavigation.PhoneNumber)</dd>
+
+            <dt>@Html.DisplayNameFor(model => model.Boat.PersonNavigation.Notes)</dt>
+            <dd>@Html.DisplayFor(model => model.Boat.PersonNavigation.Notes)</dd>
+        </dl>
+            
             <br />
         </article>
         <article>
             <h3>Tilhørsforhold</h3>
-            <p>
+            <dl>
+                <dt>@Html.DisplayNameFor(model => model.Boat.PersonNavigation.Member)</dt>
+                <dd>@(@Model.Boat.PersonNavigation.Member == 1 ? "Ja" : "Nej")</dd>
+
+
+                <dt>@Html.DisplayNameFor(model => model.Boat.PersonNavigation.BoatGuild)</dt>
+                <dd>@(@Model.Boat.PersonNavigation.BoatGuild == 1 ? "Ja" : "Nej")</dd>
+
+                <dt>@Html.DisplayNameFor(model => model.Boat.PersonNavigation.DingyGuild)</dt>
+                <dd>@(@Model.Boat.PersonNavigation.DingyGuild == 1 ? "Ja" : "Nej")</dd>
+            </dl>
+            @*<p>
                 Kunde af havn: @(@Model.Boat.PersonNavigation.Member == 1 ? "Ja" : "Nej")
             </p>
 
@@ -79,7 +124,7 @@
 
             <p>
                 Medlem af Jollelaug: @(@Model.Boat.PersonNavigation.DingyGuild == 1 ? "Ja" : "Nej")
-            </p>
+            </p>*@
         </article>
     </div>
     <a class="button" href='javascript:history.go(-1)'>Tilbage</a>
