--- a/HouHavn.Web/Pages/Lists/People/Details.cshtml
+++ b/HouHavn.Web/Pages/Lists/People/Details.cshtml
@@ -6,56 +6,59 @@
 }
 
 <h2>Detaljer for @Model.Person.FullName</h2>
+<hr />
+<div class="flex">
+    <article>
+        <h3>Stamoplysninger</h3>
+        <dl>
+            <dt>@Html.DisplayNameFor(model => model.Person.FullName)</dt>
+            <dd>@Html.DisplayFor(model => model.Person.FullName)</dd>
 
-<div>
-    <hr />
-    <h3>Stamoplysninger</h3>
-    <p>
-        @Html.DisplayFor(model => model.Person.FullName)
-    </p>
-    <p>
-        @Html.DisplayFor(model => model.Person.Address)
-    </p>
+            <dt>@Html.DisplayNameFor(model => model.Person.Address)</dt>
+            <dd>@Html.DisplayFor(model => model.Person.Address)</dd>
+            <dd>@Html.DisplayFor(model => model.Person.PostalCode) - @Html.DisplayFor(model => model.Person.City)</dd>
+            <dd>@Html.DisplayFor(model => model.Person.Country)</dd>
 
-    <p>
-        @Html.DisplayFor(model => model.Person.PostalCode) - @Html.DisplayFor(model => model.Person.City)
-    </p>
+            <dt>@Html.DisplayNameFor(model => model.Person.Email)</dt>
+            <dd>@Html.DisplayFor(model => model.Person.Email)</dd>
 
-    <p>
-        @Html.DisplayFor(model => model.Person.Country)
-    </p>
+            <dt>@Html.DisplayNameFor(model => model.Person.PhoneNumber)</dt>
+            <dd>@Html.DisplayFor(model => model.Person.PhoneNumber)</dd>
 
-    <p>
-        @Html.DisplayFor(model => model.Person.Email)
-    </p>
+            <dt>@Html.DisplayNameFor(model => model.Person.Notes)</dt>
+            <dd>@Html.DisplayFor(model => model.Person.Notes)</dd>
+        </dl>
+    </article>
+    <article>
+        <h3>Tilhørsforhold</h3>
+        <dl>
+            <dt>@Html.DisplayNameFor(model => model.Person.Member)</dt>
+            <dd>@(@Model.Person.Member == 1 ? "Ja" : "Nej")</dd>
 
-    <p>
-        @Html.DisplayFor(model => model.Person.PhoneNumber)
-    </p>
 
-    <p>
-        @Html.DisplayFor(model => model.Person.Notes)
-    </p>
-    <br />
-    <p>
-        Kunde af havn: @(@Model.Person.Member == 1 ? "Ja" : "Nej")
-    </p>
+            <dt>@Html.DisplayNameFor(model => model.Person.BoatGuild)</dt>
+            <dd>@(@Model.Person.BoatGuild == 1 ? "Ja" : "Nej")</dd>
 
-    <p>
-        Medlem af bådlaug: @(@Model.Person.BoatGuild == 1 ? "Ja" : "Nej")
-    </p>
-
-    <p>
-        Medlem af Jollelaug: @(@Model.Person.DingyGuild == 1 ? "Ja" : "Nej")
-    </p>
-    <br />
-    <p>Både:</p>
-    <p>
-        @foreach (var boat in Model.Person.Boats)
+            <dt>@Html.DisplayNameFor(model => model.Person.DingyGuild)</dt>
+            <dd>@(@Model.Person.DingyGuild == 1 ? "Ja" : "Nej")</dd>
+        </dl>
+    </article>
+    <article>
+        <h3>Både</h3>
+        @if(Model.Person.Boats.Count > 0)
         {
-            <a asp-page="../Boats/Details" asp-route-id="@boat.BoatId">@boat.Name</a><br />
+            <p>
+                @foreach (var boat in Model.Person.Boats)
+                {
+                    <a asp-page="../Boats/Details" asp-route-id="@boat.BoatId">@boat.Name</a><br />
+                }
+            </p>
         }
-    </p>
+        else
+        {
+            <p>Kunden ejer ingen både</p>
+        }
+    </article>
 </div>
 <div>
     <a class="button" asp-page="./Edit" asp-route-id="@Model.Person.PersonId">Redigér</a>
