--- a/HouHavn.Web/wwwroot/css/styles.css
+++ b/HouHavn.Web/wwwroot/css/styles.css
@@ -4,6 +4,8 @@
   justify-content: space-between; }
   .flex h3 {
     margin-bottom: 10px; }
+  .flex article {
+    width: 33.33%; }
 
 body {
   overflow-x: hidden; }
@@ -29,7 +31,7 @@ header {
   left: 0;
   right: 0;
   z-index: 3;
-  width: 100%;
+  width: 100vw;
   background: #123456; }
   header > div {
     width: 70%;
@@ -235,8 +237,10 @@ table {
   overflow-x: auto;
   border-spacing: 0; }
   table th, table td {
-    padding: 5px 10px;
+    padding: 6px 10px;
     text-align: left; }
+  table td:last-child {
+    white-space: nowrap; }
   table tr:nth-child(even) {
     background: #eee; }
   table a {
