--- a/HouHavn.Web/wwwroot/css/styles.scss
+++ b/HouHavn.Web/wwwroot/css/styles.scss
@@ -10,6 +10,9 @@ $blue: #4d5c74;
     h3{
         margin-bottom: 10px;
     }
+    article{
+        width: 33.33%;
+    }
 }
 
 body{
@@ -40,7 +43,7 @@ header {
     left: 0;
     right: 0;
     z-index: 3;
-    width: 100%;
+    width: 100vw;
     background: $dark-blue;
 
     > div {
@@ -354,12 +357,12 @@ table {
     border-spacing: 0;
 
     th, td {
-        padding: 5px 10px;
+        padding: 6px 10px;
         text-align:left;
     }
 
     td:last-child{
-        
+        white-space: nowrap;
     }
 
     tr:nth-child(even) {
