Changed Create Boat lenght, Width and depth to string input fields.

--- a/HouHavn.Web/Pages/Creation/Boats.cshtml
+++ b/HouHavn.Web/Pages/Creation/Boats.cshtml
@@ -29,7 +29,7 @@
     </div>
 
     <div class="input">
-        <input asp-for="Boat.Length" type="number" placeholder=" "/>
+        <input asp-for="Boat.Length" placeholder=" "/>
         <label asp-for="Boat.Length"></label>
         <div class="slider"></div>
     </div>
@@ -38,7 +38,7 @@
     </div>
 
     <div class="input">
-        <input asp-for="Boat.Width" type="number" placeholder=" "/>
+        <input asp-for="Boat.Width" placeholder=" "/>
         <label asp-for="Boat.Width"></label>
         <div class="slider"></div>
     </div>
@@ -47,7 +47,7 @@
     </div>
 
     <div class="input">
-        <input asp-for="Boat.Dept" type="number" placeholder=" " />
+        <input asp-for="Boat.Dept" placeholder=" " />
         <label asp-for="Boat.Dept"></label>
         <div class="slider"></div>
     </div>
